--- a/components/bag/bag.html
+++ b/components/bag/bag.html
@@ -24,5 +24,5 @@
 
   <small class="price-bag">TOTAL: $ {{$ctrl.calcPricetotal()}}</small>
 
-  <button class="proceed-btn">Proceed To Checkout</button>
+  <button class="proceed-btn" ng-click="$ctrl.proceedToCheckout()">Proceed To Checkout</button>
 </div>
