--- a/src/styl/_index.styl
+++ b/src/styl/_index.styl
@@ -47,6 +47,7 @@ main
     display inline
     display table
     float left
+    margin-right 40px
 
     a
       width 100%
@@ -54,10 +55,27 @@ main
       float left
       text-align center
       color #db9e4d
+      cursor pointer
+      transition(opacity .3s)
+      &:hover
+        opacity .7
 
       img
+        width 50px
         display block
+        margin 0 auto
 
+
+      .title-categorie
+        width 100%
+        font-size 20px
+        color corPrincipal
+        font-weight bold
+        text-align center
+
+  .all a img
+    margin-top 8px
+    width 40px
 
 
 .products-list
@@ -259,3 +277,32 @@ main
   transform(translateX(-50%))
   &:hover
     background @background - 20%
+
+
+
+
+.overlay
+  width 100%
+  height 100%
+  position fixed
+  top 0
+  left 0
+  background rgba(#000, .7)
+  display none
+
+.modal
+  width 500px
+  height 150px
+  background #fff
+  position relative
+  top 50%
+  left 50%
+  transform(translate(-50%, -50%))
+  padding 20px
+  border-radius(3px)
+
+  h1
+    font-size 1.5em
+    color corPrincipal
+    width 100%
+    text-align center
