Adicionando responsividade com o bootstrap

--- a/src/styl/_medias.styl
+++ b/src/styl/_medias.styl
@@ -1,1 +1,39 @@
 // Media Queries
+
+@media screen and (max-width 425px)
+  .btn-open-bag
+    width 140px
+    height @width
+    padding 16px
+
+    span
+      font-size 15px
+
+    img
+      width 45px
+      height @width
+
+@media screen and (max-width 500px)
+  .modal
+    width 98%
+
+  .list-categories
+    .item
+      margin-right 20px
+
+      a
+        img
+          width 30px
+
+        .title-categorie
+          font-size 12px
+
+
+
+@media screen and (max-width 320px)
+  .btn-open-bag
+    bottom .5%
+
+  .bag-full
+    width 98%
+    bottom .5%
