--- a/src/styl/_index.styl
+++ b/src/styl/_index.styl
@@ -21,16 +21,17 @@
   padding 10px 0
 
   input
-    width 450px
+    // width 450px
     font-size 20px
     padding 10px
     border-radius(3px)
     display table
+    float none
     margin 0 auto
 
 
 main
-  width 1280px
+  // width 1280px
   height auto
   display table
   margin 0 auto
@@ -40,10 +41,11 @@ main
   width auto
   height 120px
   display table
+  float none
   margin 20px auto
 
   .item
-    width 100px
+    // width 100px
     display inline
     display table
     float left
@@ -82,7 +84,7 @@ main
   width 100%
 
   .item
-    width 20%
+    // width 20%
     height 180px
     display inline
     float left
