--- a/components/product/product.html
+++ b/components/product/product.html
@@ -1,5 +1,5 @@
 <li class="item col-xs-6 col-sm-3 col-lg-2">
-  <img class="img-item" src="../../imgs/products/{{$ctrl.data.image}}" alt="" />
+  <img class="img-item" src="imgs/products/{{$ctrl.data.image}}" alt="" />
   <span class="title-item">{{$ctrl.data.title}}</span>
   <span class="price-item">$ {{$ctrl.data.price}}</span>
   <a class="add-item" ng-click="$ctrl.addItem($ctrl.data)">Add to bag</a>
