--- a/src/styl/_medias.styl
+++ b/src/styl/_medias.styl
@@ -19,7 +19,7 @@
 
   .list-categories
     .item
-      margin-right 20px
+      margin-right 12px
 
       a
         img
@@ -28,9 +28,10 @@
         .title-categorie
           font-size 12px
 
+    .all a img
+      margin-top 2px
 
-
-@media screen and (max-width 320px)
+@media screen and (max-width 425px)
   .btn-open-bag
     bottom .5%
 
